force-app/main/default/objects/fdsdeploy__Prospect_Field_Mapping__mdt/fdsdeploy__Prospect_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>FactSet Account Creation Field Mappings</label>
    <pluralLabel>FactSet Account Creation Field Mappings</pluralLabel>
</CustomObject>