force-app/main/default/objects/fdsdeploy__Prospect_Field_Mapping__mdt/fields/fdsdeploy__From_FactSet__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__From_FactSet__c</fullName>
    <label>From_FactSet</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>