force-app/main/default/objects/fdsdeploy__Prospect_Field_Mapping__mdt/fields/fdsdeploy__isDataEnrichment__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__isDataEnrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDataEnrichment</label>
    <type>Checkbox</type>
</CustomField>