force-app/main/default/objects/fdsdeploy__Prospect_Field_Mapping__mdt/fields/fdsdeploy__To_Salesforce_Account_Field__c.field-meta.xml
<CustomField>
    <fullName>fdsdeploy__To_Salesforce_Account_Field__c</fullName>
    <label>To_Salesforce_Account_Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>